--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
  dependencies {
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.+'
+    compile 'com.google.code.gson:gson:2.8.2'
     //testCompile 'junit:junit:4.12.+'
     //testCompile 'org.mockito:mockito-core:1.10.+'
 }
