--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+bin/
+.classpath
+.project
+.settings/
+build/
+.gradle/
+APDescription.txt
+MTPs-Main-Container.txt
+
 # Compiled class file
 *.class
 
@@ -25,3 +34,9 @@ hs_err_pid*
 # Exceptions
 !lib/commons-codec/commons-codec-1.3.jar
 !lib/jade.jar
+
+.project
+.metadata/
+/bin/
+.classpath
+*~
