--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
  dependencies {
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.+'
     compile 'com.google.code.gson:gson:2.8.2'
+    // https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20090211'
     //testCompile 'junit:junit:4.12.+'
     //testCompile 'org.mockito:mockito-core:1.10.+'
 }
