--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-+sonar.projectKey=autobake
-+sonar.sourceEncoding=UTF-8
-+sonar.sources=src/main
+sonar.projectKey=project-autobake
+sonar.sourceEncoding=UTF-8
+sonar.sources=src/main
